[tool.poetry]
name = "llamastack-basics"
version = "0.1.0"
description = "learning meta's llamastack for rapid ai tool development"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-stack = "^0.0.63"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
